set min-width to prevent overlays on small screens

--- a/misc/main.css
+++ b/misc/main.css
@@ -18,6 +18,7 @@ html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
   margin: 0;
   padding: 0;
+  min-width:512px;
 }
 .mdl-parrot .mdl-layout__header-row {
   padding-left: 40px;
